[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
categories = ["api-bindings"]
description = "Low-level bindings for libdisplay-info."
documentation = "https://docs.rs/libdisplay-info-sys/"
edition = "2021"
version = "0.2.2"
keywords = ["libdisplay", "DisplayID", "EDID"]
license = "MIT"
name = "libdisplay-info-sys"
repository = "https://github.com/Smithay/libdisplay-info-rs"
readme = "README.md"

[package.metadata.docs.rs]
features = ["v0_2"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
v0_2 = []

[build-dependencies]
system-deps = "7.0.3"
semver = "1.0.24"

[dependencies]

[package.metadata.system-deps.libdisplay-info]
name = "libdisplay-info"
version = ">= 0.1.0, < 0.4.0"
v0_2 = { version = "0.2.0" }
