[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
categories = ["api-bindings"]
description = "EDID and DisplayID library."
documentation = "https://docs.rs/libdisplay-info/"
edition = "2021"
version = "0.2.0"
keywords = ["libdisplay", "DisplayID", "EDID"]
license = "MIT"
name = "libdisplay-info"
repository = "https://github.com/Smithay/libdisplay-info-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
v0_2 = ["libdisplay-info-sys/v0_2"]

[dependencies]
libdisplay-info-sys = { version = "0.2.0", path = "../libdisplay-info-sys" }
libc = "0.2.155"
thiserror = "2.0.9"
libdisplay-info-derive = { version = "0.1.0", path = "../libdisplay-info-derive" }
bitflags = "2.6"

[dev-dependencies]
anyhow = "1.0"